--- a/bazsite.cabal
+++ b/bazsite.cabal
@@ -20,4 +20,5 @@ executable bazsite
   build-depends:       base >= 4.7 && < 5,
                        hakyll,
                        containers,
-                       pandoc
+                       pandoc,
+                       text
